visual bug fixes for PWA view on iOS devices

--- a/src/staff/attendance/AttendanceUpdate.scss
+++ b/src/staff/attendance/AttendanceUpdate.scss
@@ -16,7 +16,7 @@ $grey: #3a3939;
   top: 0;
 
   width: 100vw;
-  height: 100vh;
+  height: 100svh;
 
   background-color: rgba(0, 0, 0, 0.5);
 
@@ -29,7 +29,7 @@ $grey: #3a3939;
   z-index: 100;
 
   width: 100vw;
-  height: 100vh;
+  height: 100svh;
 
   position: fixed;
   top: 0;
