--- a/src/staff/schedule/Calendar/EventDetails.scss
+++ b/src/staff/schedule/Calendar/EventDetails.scss
@@ -17,7 +17,7 @@ $grey: #3a3939;
   position: fixed;
 
   width: 100vw;
-  height: 100vh;
+  height: 100svh;
 
   top: 0;
   right: 0;
@@ -40,7 +40,7 @@ $grey: #3a3939;
   right: 0;
 
   width: 100vw;
-  height: 100vh;
+  height: 100svh;
 
   pointer-events: none;
 
