--- a/src/staff/students/StudentProfilesDetails/JournalArchive.scss
+++ b/src/staff/students/StudentProfilesDetails/JournalArchive.scss
@@ -14,7 +14,7 @@ $grey: #3a3939;
   pointer-events: none;
 
   width: 100vw;
-  height: 100vh;
+  height: 100svh;
 
   position: fixed;
   top: 0;
@@ -199,7 +199,7 @@ $grey: #3a3939;
   cursor: pointer;
 
   width: 100vw;
-  height: 100vh;
+  height: 100svh;
 
   background-color: rgba(0, 0, 0, 0.4);
 }
